--- a/src/Animal.css
+++ b/src/Animal.css
@@ -1,22 +1,37 @@
 .animal {
     border: 1px solid grey;
     box-shadow: 0.1em 0.1em 0.2em;
+    padding: 0.5em;
+    border-radius: 0.5em;
+    display: grid;
+    grid-template-areas: 
+    "icone nome nome"
+    "icone peso peso"
+    "icone . extincao";
+    
+    .icone{
+        font-size: 4em;
+        grid-area: icone;
+    }
+    
+    .nome{
+        font-weight: 600;
+        grid-area: nome;
+    }
+    
+    .peso{
+        opacity: 0.6;
+        grid-area: peso;
+    }
+    
+    .extincao{
+        background-color: darkred;
+        color: red;
+        min-height: 1em;
+        grid-area: extincao;
+    }
 }
 
-.animal :nth-child(1){
-    font-size: 4em;
-}
-
-.animal :nth-child(2){
-    font-weight: 600;
-}
-
-.animal :nth-child(3){
-    opacity: 0.6;
-}
-
-.animal :nth-child(4){
-    background-color: darkred;
-    color: red;
-    min-height: 1em;
+.animal {
+    place-items: center;
 }
