--- a/src/Animal.css
+++ b/src/Animal.css
@@ -26,7 +26,7 @@
     
     .extincao{
         background-color: darkred;
-        color: red;
+        color: rgb(243, 236, 236);
         min-height: 1em;
         grid-area: extincao;
     }
