--- a/src/Exibicao.css
+++ b/src/Exibicao.css
@@ -2,8 +2,11 @@
     font-weight: 900;
     padding: 1em;
     display: grid;
-    grid-template-areas: "local inicio fim";
-    
+    grid-template-areas:
+        "local inicio fim"
+        "animais animais animais"
+    ;
+
     .inicio {
         color: darkgreen;
         grid-area: inicio;
@@ -13,8 +16,16 @@
         color: darkred;
         grid-area: fim;
     }
-    .local{
+
+    .local {
         text-decoration: underline;
         grid-area: local;
+    }
+
+    .animais {
+        grid-area: animais;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        grid-area: animais;
     }
 }
